# VetJobScraper

./: .gitignore  .replit  cleanup-and-push.sh  fresh-push.sh  package-lock.json  package.json  push-to-github.sh  pyproject.toml  replit.md
attached_assets/: Pasted--Veteran-Job-Scraper-Free-Implementation-Based-on-JobSpy-library-for-multi-platform-scraping--1757341134186_1757341134188.txt  Pasted--server-auth-ts-import-Request-Response-NextFunction-fr_1766761965889.txt  Pasted--server-auth-ts-import-Request-Response-NextFunction-fr_1766764771187.txt  Pasted--shared-schema-ts-import-sql-from-drizzle-orm-import-pg_1766764671833.txt  Pasted-5-DATA-ORGANIZATION-MANAGEMENT-Current-Flat-list-of-jobs-with-basic-sorting-Could-Be-More-User-1757513127852_1757513127857.txt  Pasted-I-need-a-comprehensive-audit-of-my-job-scraper-application-I-am-the-only-user--1759908961093_1759908961094.txt  Pasted-Veteran-Job-Scraper-Setup-Guide-Quick-Start-5-Minutes-1-Install-Required-Libraries-bash-In-Repli-1757341167083_1757341167084.txt  Pasted-class-MemStorage-implements-IStorage-existing-methods-a_1766765013928.txt  Pasted-class-PostgresStorage-implements-IStorage-existing-meth_1766764945288.txt  Pasted-pkill-f-npm-run-dev-2-dev-null-sleep-2-cat-server-route_1766771547992.txt
client/public/: project.b64
client/src/: App.tsx  index.css
python/: requirements.txt  veteran_job_scraper.py
scripts/: create-admin.ts
server/: auth.ts  db.ts  index.ts  routes.ts  storage.ts
server/services/: github-push.ts  job-matching.ts  jobScraper.ts  kazaConnectApi.ts  scheduler.ts
shared/: schema.ts
(+30 files in other folders)
