[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "lxml>=6.0.1",
    "pandas>=2.3.2",
    "python-jobspy>=1.1.82",
    "requests>=2.32.5",
    "scrapy>=2.13.3",
    "selenium>=4.35.0",
]
